[project]
name = "mcp-client-performance-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.116.1",
    "mcp>=1.13.0",
    "ruff>=0.12.8",
    "starlette>=0.47.2",
    "uvicorn>=0.35.0",
]
